@@ -1,3 +1,7 @@
+2009-07-31  Hans-Peter Nilsson  <hp@bitrange.com>
+
+	* linker.c (fix_syms): Consider SEC_LOAD when choosing section.
+
 2009-07-30  Alan Modra  <amodra@bigpond.net.au>
 
 	* elf32-ppc.c (ppc_elf_check_relocs): Always set up sections
